# Hippo-Code

./: .gitignore  .hipporules_example.md  ARCHITECTURE.md  MEMORY_example.md  README.md  config.json.example.json  config.yaml.example  mcp-test-server.js  package-lock.json  package.json  playwright.config.js  pom.xml  test.md  vitest.config.js
.github/workflows/: ci.yml
docs/: README.en.md
scripts/: build-codemirror.mjs
src/main/java/com/example/agent/: AgentApplication.java  Config.java  ConsoleStyle.java  DesktopApplication.java  SimpleJavaAgent.java  WebApplication.java
src/main/resources/: config.properties  logback.xml
src/main/resources/prompts/: prompts.yaml
src/main/resources/prompts/base/: base_chat.md  base_coding.md
src/main/resources/prompts/core/: role.md  tool-rules.md
src/main/resources/prompts/mode/: chat.md  coding.md
src/main/resources/static/: chat.html  cockpit.html  index.html
src/main/resources/static/css/: cockpit.css  common.css  variables.css
src/main/resources/static/css/components/: chat-panel.css  context-selector.css  dropdown.css  modals.css  preview.css  rule-selector.css  (+6 more)
src/main/resources/static/js/: chat-service.js  chat-ui.js  desktop-bridge.js  main.js  markdown-renderer.js  memory-panel.js  mermaid-renderer.js  session-manager.js  sse-client.js  utils.js  workspace-manager.js
src/test/js/: chat-panel.test.js  chat-service.test.js  chat-ui.test.js  message-session.test.js
tree-sitter-wasm/: BUILD_WINDOWS.ps1  Cargo.toml  Makefile
tree-sitter-wasm/.cargo/: config.toml
tree-sitter-wasm/src/: lib.rs
(+673 files in other folders)
